BZ 2403048 Add support for setting NFS export delegations via ceph orchestrator
Signed-off-by: Pooja Dwivedi <pooja.dwivedi@ibm.com>

--- a/src/pybind/mgr/cephadm/templates/services/nfs/ganesha.conf.j2
+++ b/src/pybind/mgr/cephadm/templates/services/nfs/ganesha.conf.j2
@@ -20,7 +20,8 @@ NFS_CORE_PARAM {
 }
 
 NFSv4 {
-        Delegations = false;
+        Delegations = true;
+        Deleg_Recall_Retry_Delay = 1;
         RecoveryBackend = "rados_cluster";
         Minor_Versions = 1, 2;
         Server_Scope = "{{ cluster_id }}-{{ namespace }}";
